fixed safe-area on mobile browser

--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@ html, body {
     padding-left: env(safe-area-inset-left);
     padding-right: env(safe-area-inset-right);
     padding-bottom: env(safe-area-inset-bottom);
-    background-color: #497D74;
+    /* background-color: #497D74; */
 }
 
 
